examples/test/testpolicy13155.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13155
  namespace: namespace486
spec:
  podSelector:
    matchLabels:
      key3: value11
      key13: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value27
          key41: value20
          key17: value15
      podSelector:
        matchLabels:
          key15: value40
          key41: value26
          key37: value46
